feat: creating first blog post

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,23 +4,29 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>written - Archives</title>
+        <title>written - $title$</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-        <link rel="stylesheet" href="./css/default.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
+            >
+        <link rel="stylesheet" href="/css/default.css" />
     </head>
     <body>
         <section class="hero is-fullheight" class="background-color: #f1efe7 !important">
             <div class="hero-body">
                 <div class="container has-text-centered">
                     <div class="has-text-centered">
-                        <p class="title" style="font-family: 'League Spartan'; font-size: 140px; letter-spacing: -6px;">written.</p>
-                        <p class="subtitle" style="font-family: 'League Spartan'; font-size: 40px; letter-spacing: -3px; font-weight: 600">by roqueando.</p>
-                        <p class="subtitle">
-
+                        <p class="title" style="font-family: 'League Spartan'; font-size: 140px; letter-spacing: -6px;">projects.</p>
+                        <p class="subtitle" >
+                            <a href="/" class="button is-light is-warning">
+                                <span class="icon">
+                                    <i class="fa-solid fa-angle-left"></i>
+                                </span>
+                            </a>
                             <a href="#" class="button is-dark">
                                 <span class="icon">
                                     <i class="fa-brands fa-github-alt"></i>
@@ -45,34 +51,14 @@
                                 </span>
                             </a>
                         </p>
-                        <p class="subtitle">
-                            <a href="./articles.html" class="button is-light is-warning">artigos</a>
-                            <a href="./projects.html" class="button is-light is-warning">projetos</a>
-                        </p>
+                        <main role="main">
+                          $body$
+                        </main>
 
                     </div>
                 </div>
             </div>
         </section>
 
-        <main role="main">
-            Here you can find all my previous posts:
-<div class="fixed-grid has-3-cols">
-    <div class="grid">
-        
-        <div class="card" style="max-width: 23rem; max-height: 23rem">
-            <div class="card-content">
-                <a href="./posts/2024-11-22-linear-regression-from-scratch.html" class="title" style="font-family: 'League Spartan'">
-                    “Regressão Linear com Haskell”
-                </a>
-                <p class="subtitle" style="font-family: 'League Spartan'">November 22, 2024</p>
-            </div>
-        </div>
-        
-    </div>
-</div>
-
-
-        </main>
     </body>
 </html>
