--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,7 +1,14 @@
-<ul>
-    $for(posts)$
-        <li>
-            <a href="$url$">$title$</a> - $date$
-        </li>
-    $endfor$
-</ul>
+<div class="fixed-grid has-3-cols">
+    <div class="grid">
+        $for(posts)$
+        <div class="card" style="max-width: 23rem; max-height: 23rem">
+            <div class="card-content">
+                <a href="$url$" class="title" style="font-family: 'League Spartan'">
+                    “$title$”
+                </a>
+                <p class="subtitle" style="font-family: 'League Spartan'">$date$</p>
+            </div>
+        </div>
+        $endfor$
+    </div>
+</div>
