--- a/templates/post.html
+++ b/templates/post.html
@@ -1,11 +1,77 @@
-<article>
-    <section class="header">
-        Posted on $date$
-        $if(author)$
-            by $author$
-        $endif$
-    </section>
-    <section>
-        $body$
-    </section>
-</article>
+<!doctype html>
+<html lang="en" data-theme="light">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>written - $title$</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
+            >
+        <link rel="stylesheet" href="/css/default.css" />
+    </head>
+    <body>
+        <section class="hero is-fullheight" class="background-color: #f1efe7 !important">
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <div class="has-text-centered">
+                        <p class="title" style="font-family: 'League Spartan'; font-size: 110px; letter-spacing: -6px;">$title$.</p>
+                        <p class="subtitle" >
+                            <a href="/" class="button is-light is-warning">
+                                <span class="icon">
+                                    <i class="fa-solid fa-angle-left"></i>
+                                </span>
+                            </a>
+                            <a href="#" class="button is-dark">
+                                <span class="icon">
+                                    <i class="fa-brands fa-github-alt"></i>
+                                </span>
+                            </a>
+
+                            <a href="#" class="button is-dark is-info">
+                                <span class="icon">
+                                    <i class="fa-brands fa-bluesky"></i>
+                                </span>
+                            </a>
+
+                            <a href="#" class="button is-dark is-primary">
+                                <span class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </span>
+                            </a>
+
+                            <a href="#" class="button is-dark is-info">
+                                <span class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </span>
+                            </a>
+                        </p>
+                        <div class="section">
+                            <article id="article">
+                                <section class="subtitle header has-text-left" style="font-family: 'League Spartan'; font-size: 34px">
+                                    $date$
+                                    $if(author)$
+                                    by $author$
+                                    $endif$
+                                </section>
+                                <section class="has-text-left" style="font-size: 22px">
+                                    $body$
+                                </section>
+                            </article>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <script type="text/javascript" async
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+    </body>
+</html>
