--- a/templates/post.html
+++ b/templates/post.html
@@ -14,6 +14,7 @@
             href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
             >
         <link rel="stylesheet" href="/css/default.css" />
+        <link rel="stylesheet" href="/css/syntax.css" />
     </head>
     <body>
         <section class="hero is-fullheight" class="background-color: #f1efe7 !important">
