--- a/css/default.css
+++ b/css/default.css
@@ -11,3 +11,10 @@ html {
   font-family: initial !important;
   font-weight: bold !important;
 }
+
+.sourceCode.haskell {
+  background-color: #111;
+}
+.sourceCOde {
+  border-radius: 10px;
+}
